--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,viewport-fit=cover,user-scalable=no"/>
   <meta name="format-detection" content="telephone=no"/>
   <meta name="theme-color" content="#07142e"/>
-
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-
   <style>
     :root{
       --bg: radial-gradient(1100px 800px at 50% 10%, #0a1f44 0%, #081939 42%, #07142e 100%);
@@ -195,11 +193,9 @@
   </div>
 
   <script>
-  // ===== ВАЖЛИВО: ми не тягнемо реальні оголошення з інших сайтів (авторське право).
-  // Дані — синтетичні, 2000 шт. з реалістичними параметрами і зображеннями з loremflickr.
-
+  // ===== ЛОКАЛЬНІ ДАНІ (без зовнішніх картинок)
   const $=s=>document.querySelector(s), $$=s=>document.querySelectorAll(s);
-  const DB_KEY="auto369_listings_simple", CTRL_KEY="auto369_ctrl_simple";
+  const DB_KEY="auto369_listings_canvas", CTRL_KEY="auto369_ctrl_canvas";
 
   const DRIVE=["FWD","RWD","AWD"];
   const BODIES=["Седан","Хетчбек","Кросовер","Універсал","Мінівен","Купе","Пікап","Позашляховик"];
@@ -209,12 +205,7 @@
   const SECTIONS=["Легкові","Кросовери","Електро","Вани/Мікроавтобуси"];
   const YEARS=Array.from({length:26},(_,i)=>2000+i);
 
-  const CITIES=[
-    "Київ","Харків","Одеса","Дніпро","Львів","Запоріжжя","Кривий Ріг","Миколаїв","Вінниця","Херсон",
-    "Полтава","Чернігів","Черкаси","Суми","Житомир","Хмельницький","Чернівці","Рівне",
-    "Івано-Франківськ","Тернопіль","Луцьк","Ужгород","Кропивницький","Кам'янське","Кременчук",
-    "Біла Церква","Бровари","Бориспіль","Ірпінь","Буча"
-  ];
+  const CITIES=["Київ","Харків","Одеса","Дніпро","Львів","Запоріжжя","Кривий Ріг","Миколаїв","Вінниця","Херсон","Полтава","Чернігів","Черкаси","Суми","Житомир","Хмельницький","Чернівці","Рівне","Івано-Франківськ","Тернопіль","Луцьк","Ужгород","Кропивницький","Кам'янське","Кременчук","Біла Церква","Бровари","Бориспіль","Ірпінь","Буча"];
 
   const BRANDS={
     "Toyota":["Corolla","Camry","RAV4","Land Cruiser","Yaris","Prius","Avensis"],
@@ -254,23 +245,72 @@
   const pick=a=>a[rand(0,a.length-1)];
   const escapeHtml=s=>(s||"").replace(/[&<>"']/g,m=>({"&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#039;"}[m]));
 
-  // Фолбек-картинка через Canvas (якщо зовнішнє фото не завантажиться)
-  function canvasPNG(title, colorIdx=0){
+  // ===== Генератор «фото» (Canvas → PNG data:)
+  function carPNG(title, seed=0, body="Седан", colorIdx=0){
     const c=document.createElement('canvas'); c.width=800; c.height=500;
-    const g=c.getContext('2d'); const colors=["#0b3a8a","#11366b","#0d2b56","#14396e","#0c325e","#052547"];
-    g.fillStyle=colors[colorIdx%colors.length]; g.fillRect(0,0,c.width,c.height);
-    g.fillStyle="#ffd33b"; g.font="bold 48px 'Russo One', Arial"; g.textAlign="center"; g.fillText(title, 400, 260);
-    g.fillStyle="rgba(255,255,255,.8)"; g.font="20px 'Montserrat', Arial"; g.fillText("AUTO 369°", 400, 460);
-    return c.toDataURL("image/png");
+    const g=c.getContext('2d');
+
+    const palettes=[
+      ["#0e2a58","#163b7a","#0b1d3b"],
+      ["#3a1f5d","#532e8a","#1b0f2f"],
+      ["#0b3a2e","#147a60","#06241d"],
+      ["#6b1f1f","#a23333","#240909"]
+    ];
+    const pal=palettes[colorIdx%palettes.length];
+    const grad=g.createLinearGradient(0,0,800,500);
+    grad.addColorStop(0,pal[0]); grad.addColorStop(1,pal[1]);
+    g.fillStyle=grad; g.fillRect(0,0,800,500);
+    g.fillStyle=pal[2]; g.fillRect(0,400,800,100);
+
+    // ground shadow
+    g.fillStyle="rgba(0,0,0,.25)"; g.beginPath(); g.ellipse(400,390,260,40,0,0,Math.PI*2); g.fill();
+
+    const carColors=['#ffcf33','#e74c3c','#2ecc71','#3498db','#9b59b6','#f39c12','#1abc9c','#ecf0f1'];
+    const cc=carColors[(seed+3)%carColors.length];
+
+    // wheels
+    function wheel(x,y){
+      g.fillStyle='#111'; g.beginPath(); g.arc(x,y,48,0,Math.PI*2); g.fill();
+      g.fillStyle='#bbb'; g.beginPath(); g.arc(x,y,20,0,Math.PI*2); g.fill();
+    }
+    wheel(280,380); wheel(540,380);
+
+    // body
+    g.fillStyle=cc; g.strokeStyle='#00000040'; g.lineWidth=2;
+    if(body==='Кросовер' || body==='Позашляховик'){
+      g.beginPath();
+      g.moveTo(180,360); g.lineTo(180,330); g.lineTo(260,300); g.lineTo(430,290); g.lineTo(520,310); g.lineTo(600,330); g.lineTo(620,360); g.closePath();
+      g.fill(); g.stroke();
+    } else if(body==='Хетчбек'){
+      g.beginPath();
+      g.moveTo(160,360); g.lineTo(175,330); g.lineTo(260,300); g.lineTo(420,300); g.lineTo(520,330); g.lineTo(560,360); g.closePath();
+      g.fill(); g.stroke();
+    } else if(body==='Купе'){
+      g.beginPath();
+      g.moveTo(170,360); g.lineTo(210,320); g.quadraticCurveTo(360,270,520,310); g.lineTo(580,360); g.closePath();
+      g.fill(); g.stroke();
+    } else {
+      g.beginPath();
+      g.moveTo(160,360); g.lineTo(210,320); g.quadraticCurveTo(360,270,520,310); g.lineTo(600,360); g.closePath();
+      g.fill(); g.stroke();
+    }
+
+    // windows
+    g.fillStyle='rgba(255,255,255,.85)';
+    g.fillRect(300,305,90,35); g.fillRect(400,300,100,38);
+
+    // lights
+    g.fillStyle='#fff8b0'; g.fillRect(600,340,14,10);
+    g.fillStyle='#ff5c5c'; g.fillRect(160,340,12,10);
+
+    // caption
+    g.fillStyle='#ffd33b'; g.font="bold 42px 'Russo One', Arial"; g.textAlign="center";
+    g.fillText(title, 400, 80);
+
+    return c.toDataURL('image/png');
   }
 
-  // Отримати картинку з loremflickr (детерміновано по id)
-  function carPhotoURL(brand, model, seed){
-    const q = encodeURIComponent(`${brand},${model},car`);
-    return `https://loremflickr.com/800/500/${q}?lock=${seed}`;
-  }
-
-  // Генеруємо рівно 2000 оголошень
+  // ===== Створюємо рівно 2000 оголошень
   const TARGET_TOTAL=2000;
   function generateDB(){
     const out=[]; const brands=Object.keys(BRANDS);
@@ -288,12 +328,11 @@
       const power = electric ? rand(120,450) : rand(70,320);
       const priceBase = electric? 18000: 6000;
       const price = Math.max(2000, Math.round(priceBase + (2025-year)*500 + rand(-1500,7000)));
-      const id=uid(), seed=(i*97)%100000;
+      const id=uid();
       out.push({
         id, city, section, brand, model, year, mileage, fuel, gear,
         drive: pick(DRIVE), body: pick(BODIES), power, color: pick(COLORS),
         price, currency:"$", created: Date.now()-rand(0,60*86400*1000),
-        img: carPhotoURL(brand, model, seed), // легка URL-картинка
         views: rand(100,500),
         vin: (Math.random()<.25?("UA"+rand(1000000,9999999)):""),
         seller:{ name: pick(["Олег","Ірина","Сергій","Анна","Віктор","Максим","Марія"])+" "+pick(["К.","Л.","М.","С.","Д."]), phone:"+380"+rand(500000000, 999999999)},
@@ -303,7 +342,6 @@
     }
     setDB(out);
   }
-
   if(getDB().length===0){ generateDB(); }
 
   // ===== UI ІНІТ
@@ -323,7 +361,7 @@
   fillSelect(fltModel, []);
   fillSelect(fltYearMin, YEARS); fillSelect(fltYearMax, YEARS);
 
-  // Форма "Додати" — лише селекти, модель залежить від марки
+  // Форма "Додати"
   const mapSelectData={sCity:CITIES,sSection:SECTIONS,sFuel:FUELS,sGear:GEARS,sDrive:DRIVE,sBody:BODIES,sColor:COLORS,sBrand:Object.keys(BRANDS)};
   Object.keys(mapSelectData).forEach(id=>fillSelect($("#"+id), mapSelectData[id], false));
   fillSelect($("#sModel"), [], false);
@@ -384,24 +422,21 @@
     btnMore.style.display = (page*pageSize < lastResults.length) ? "inline-block":"none";
   }
 
-  function imgWithFallback(src, alt, seed){
-    const el=document.createElement("img");
-    el.loading="lazy"; el.alt=alt; el.src=src;
-    el.onerror=()=>{ el.onerror=null; el.src=canvasPNG(alt, seed%6); };
-    return el;
-  }
-
   function renderCard(it){
     const el=document.createElement('article'); el.className="card"; el.setAttribute('role','button'); el.title="Дивитися";
-    el.innerHTML=`<div class="thumb"><div class="badge">${it.price.toLocaleString('uk-UA')} ${it.currency}</div><div class="views">👁 ${it.views}</div></div>
-                  <div class="body">
-                    <div class="title">${it.brand} ${it.model} • ${it.year}</div>
-                    <div class="meta">${it.city} • ${it.section}</div>
-                    <div class="meta">${(it.mileage/1000|0)} тис.км • ${it.fuel} • ${it.gear}</div>
-                  </div>`;
-    const img=imgWithFallback(it.img, `${it.brand} ${it.model}`, it.year+it.price);
-    el.querySelector(".thumb").appendChild(img);
-    el.onclick=()=>openDetail(it.id); // відкриваємо по кліку всю картку
+    const img1 = carPNG(`${it.brand} ${it.model}`, (it.year+it.price)%7, it.body, (it.power+it.year)%4);
+    el.innerHTML=`
+      <div class="thumb">
+        <img src="${img1}" alt="${it.brand} ${it.model}" loading="lazy">
+        <div class="badge">${it.price.toLocaleString('uk-UA')} ${it.currency}</div>
+        <div class="views">👁 ${it.views}</div>
+      </div>
+      <div class="body">
+        <div class="title">${it.brand} ${it.model} • ${it.year}</div>
+        <div class="meta">${it.city} • ${it.section}</div>
+        <div class="meta">${(it.mileage/1000|0)} тис.км • ${it.fuel} • ${it.geар||it.gear}</div>
+      </div>`;
+    el.onclick=()=>openDetail(it.id);
     grid.appendChild(el);
   }
 
@@ -420,7 +455,7 @@
     const idx=db.findIndex(x=>x.id===id); if(idx<0) return;
     const it=db[idx];
 
-    // Лічильник переглядів
+    // лічильник переглядів
     it.views = (it.views||0)+1; db[idx]=it; setDB(db);
 
     const d=$("#detail"); d.classList.add('active');
@@ -432,18 +467,16 @@
       <div class="pill" style="margin-left:auto">👁 ${it.views}</div>
     `;
 
-    const big=document.createElement('img'); big.loading="lazy"; big.alt=`${it.brand} ${it.model}`;
-    big.src=it.img; big.onerror=()=>{big.src=canvasPNG(`${it.brand} ${it.model}`,0);};
+    const big = carPNG(`${it.brand} ${it.model}`, 0, it.body, 0);
+    const s1  = carPNG(`${it.brand} ${it.model}`, 1, it.body, 1);
+    const s2  = carPNG(`${it.brand} ${it.model}`, 2, it.body, 2);
 
-    const s1=document.createElement('img'); s1.loading="lazy"; s1.alt="view1"; s1.src=carPhotoURL(it.brand,it.model,(id.length*17)%100000);
-    s1.onerror=()=>{s1.src=canvasPNG(`${it.brand} ${it.model}`,1);};
-    const s2=document.createElement('img'); s2.loading="lazy"; s2.alt="view2"; s2.src=carPhotoURL(it.brand,it.model,(id.length*31)%100000);
-    s2.onerror=()=>{s2.src=canvasPNG(`${it.brand} ${it.model}`,2);};
-
-    $("#dGal").innerHTML=`<div class="big"></div><div class="sm"><div style="position:relative; padding-top:56%; background:#0b3a8a; border-radius:12px; overflow:hidden"></div><div style="position:relative; padding-top:56%; background:#0b3a8a; border-radius:12px; overflow:hidden"></div></div>`;
-    $("#dGal").querySelector(".big").appendChild(big);
-    const sm=$("#dGal").querySelectorAll(".sm > div");
-    sm[0].appendChild(s1); sm[1].appendChild(s2);
+    $("#dGal").innerHTML=`
+      <div class="big"><img src="${big}" loading="lazy"></div>
+      <div class="sm">
+        <div style="position:relative; padding-top:56%; background:#0b3a8a; border-radius:12px; overflow:hidden"><img src="${s1}" loading="lazy"></div>
+        <div style="position:relative; padding-top:56%; background:#0b3a8a; border-radius:12px; overflow:hidden"><img src="${s2}" loading="lazy"></div>
+      </div>`;
 
     $("#dSpecs").innerHTML=`
       ${spec("Місто",it.city)} ${spec("Розділ",it.section)} ${spec("Пробіг",(it.mileage/1000|0)+" тис.км")}
@@ -480,7 +513,6 @@
     const rec={
       id, city, section, brand, model, year, mileage, fuel, gear, drive, body, power, color,
       price, currency:"$", created: now, vin, seller:{name:"Приватний продавець", phone}, desc,
-      img: carPhotoURL(brand, model, (id.length*53)%100000),
       views: rand(5,25)
     };
     db.unshift(rec); setDB(db);
@@ -489,10 +521,9 @@
     applyFilters();
   };
 
-  // Навігація (дві вкладки)
+  // Вкладки
   $("#tabSearch").onclick=()=>{ $("#sellPanel").style.display="none"; window.scrollTo({top:0, behavior:"smooth"}); };
   $("#tabSell").onclick=()=>{ $("#sellPanel").style.display="block"; window.scrollTo({top:document.body.scrollHeight, behavior:"smooth"}); };
-
   </script>
 </body>
 </html>
