--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     .btn{height:48px; border:none; border-radius:14px; background:var(--brand); color:#111; font:700 16px/48px "Russo One"; padding:0 18px; cursor:pointer; box-shadow:0 6px 0 rgba(0,0,0,.35), inset 0 -3px 0 rgba(0,0,0,.18);}
     .btn:active{transform:translateY(2px); background:var(--brand-press); box-shadow:0 4px 0 rgba(0,0,0,.35), inset 0 -2px 0 rgba(0,0,0,.18);}
     .btn.ghost{background:rgba(255,255,255,.1); color:#fff;}
+    .btn.white{background:#fff; color:#111; box-shadow:0 6px 0 rgba(0,0,0,.35), inset 0 -3px 0 rgba(0,0,0,.12);}
+    .btn.white:active{background:#f2f2f2;}
     .check{display:flex; align-items:center; gap:8px; margin-top:12px; font-size:13px; opacity:.9}
 
     /* Nice Select (desktop) */
@@ -106,6 +108,18 @@
     .divider{height:1px; background:var(--line); margin:10px 0}
     .seller{display:flex; gap:10px; align-items:center}
     .avatar{width:44px; height:44px; border-radius:50%; background:#203157; display:flex; align-items:center; justify-content:center; font-weight:800}
+
+    /* Sticky bottom More bar */
+    .morebar{
+      position:fixed; left:0; right:0; bottom:0; z-index:110;
+      padding:8px 12px calc(8px + env(safe-area-inset-bottom));
+      background:linear-gradient(180deg, rgba(7,15,35,0), rgba(7,15,35,.85) 28%, rgba(7,15,35,.95));
+      border-top:1px solid var(--line);
+      display:none;
+      backdrop-filter:saturate(130%) blur(6px);
+    }
+    .morebar .inner{max-width:1200px; margin:0 auto; display:flex; justify-content:center;}
+    .morebar .btn{min-width:240px;}
   </style>
 </head>
 <body>
@@ -118,6 +132,7 @@
       <input type="file" id="importJson" accept="application/json" style="display:none">
       Імпорт JSON
     </label>
+    <div class="pill" id="importUrlBtn" title="Імпорт з URL">Імпорт URL</div>
   </header>
 
   <main class="container">
@@ -163,7 +178,8 @@
     <section class="topline">
       <div id="resCount" class="muted">0 результатів</div>
       <div class="grow"></div>
-      <button class="btn" id="btnMore">Показати ще</button>
+      <!-- верхню кнопку ховаємо, залишаємо для сумісності логіки -->
+      <button class="btn" id="btnMore" style="display:none">Показати ще</button>
     </section>
     <section class="grid" id="grid"></section>
 
@@ -211,14 +227,24 @@
       <div id="dDesc" class="muted"></div>
       <div class="divider"></div>
       <div class="seller" id="dSeller"></div>
+      <div id="dAttribution" class="muted" style="margin-top:8px; font-size:12px; opacity:.8"></div>
+    </div>
+  </div>
+
+  <!-- Sticky bottom "More" -->
+  <div class="morebar" id="morebar">
+    <div class="inner">
+      <button class="btn white" id="btnMoreBottom">Показати ще</button>
     </div>
   </div>
 
   <script>
-  // === ВАЖНО ===
-  // Я не копирую и не вставляю контент с auto.ria/rst (это нарушает их права).
-  // Но ты можешь импортировать СВОИ данные (URL или data:) через кнопку "Імпорт JSON".
-  // Формат — см. ниже в комментарии.
+  // === ВАЖЛИВО ===
+  // Я НЕ тягну контент із auto.ria / rst / інших сайтів без їх дозволу.
+  // Це порушує їхні умови/права. Тому:
+  // 1) Є ІМПОРТ JSON з файлу (кнопка вгорі).
+  // 2) Додав ІМПОРТ з URL (ваш JSON на GitHub/Google Sheets/свій сервер).
+  // 3) У демо використовую фото з Wikimedia (CC), + fallback-рендер у Canvas.
 
   const $=s=>document.querySelector(s), $$=s=>document.querySelectorAll(s);
   const DB_KEY="auto369_listings_nice", CTRL_KEY="auto369_ctrl_nice";
@@ -244,7 +270,7 @@
   const rand=(a,b)=>Math.floor(Math.random()*(b-a+1))+a;
   const pick=a=>a[rand(0,a.length-1)];
 
-  // Гладкий «движок» картинок: если src не грузится — ставим fallback (Canvas)
+  // Генерація PNG, fallback якщо фото не завантажилось
   function carPNG(title, seed=0, body="Седан", colorIdx=0){
     const c=document.createElement('canvas'); c.width=800; c.height=500;
     const g=c.getContext('2d');
@@ -267,12 +293,12 @@
     return c.toDataURL('image/png');
   }
   function createImg(src, alt, fallback){
-    const img=document.createElement("img"); img.loading="lazy"; img.alt=alt;
+    const img=document.createElement("img"); img.loading="lazy"; img.alt=alt; img.referrerPolicy="no-referrer";
     img.src = src || fallback; img.onerror=()=>{ img.onerror=null; img.src=fallback; };
     return img;
   }
 
-  // Начальная синтетическая база (~2000)
+  // Початкова синтетична база (~2000) + CC-демо фото
   function seedDB(){
     const out=[]; const brands=Object.keys(BRANDS); let i=0;
     while(out.length<2000){
@@ -286,21 +312,25 @@
       out.push({id:uid(),city,section,brand,model,year,mileage,fuel,gear,drive:pick(DRIVE),body:pick(BODIES),power,color:pick(COLORS),price,currency:"$",created:Date.now()-rand(0,60*86400*1000),views:rand(100,500),vin:(Math.random()<.25?("UA"+rand(1000000,9999999)):""),seller:{name:pick(["Олег","Ірина","Сергій","Анна","Віктор","Максим","Марія"])+" "+pick(["К.","Л.","М.","С.","Д."]),phone:"+380"+rand(500000000,999999999)},desc:"Гарний стан, чесний пробіг. ТО вчасно. Деталі по телефону.",images:[]});
       i++;
     }
-    // демо: нескольким карточкам добавим CC-фото (Wikimedia)
+    // Легальні демо: кілька CC-фото з Wikimedia (атрибуцію покажемо у деталях)
     const demo=[
       "https://upload.wikimedia.org/wikipedia/commons/2/26/2018_Volkswagen_Golf_SE_NAV_TDi_1.6_Front.jpg",
       "https://upload.wikimedia.org/wikipedia/commons/6/65/2018_Toyota_Camry_LE_front_6.22.18.jpg",
       "https://upload.wikimedia.org/wikipedia/commons/b/b1/2018_BMW_320d_M_Sport_Automatic_2.0_Front.jpg",
       "https://upload.wikimedia.org/wikipedia/commons/e/ea/2018_Audi_A4_Sport_TDi_2.0_Front.jpg",
       "https://upload.wikimedia.org/wikipedia/commons/8/8e/2017_Skoda_Octavia_SE_TDi_1.6_Front.jpg",
-      "https://upload.wikimedia.org/wikipedia/commons/7/7f/2018_Kia_Sportage_3_CRDi_ISG_1.7_Front.jpg"
+      "https://upload.wikimedia.org/wikipedia/commons/7/7f/2018_Kia_Sportage_3_CRDi_ISG_1.7_Front.jpg",
+      "https://upload.wikimedia.org/wikipedia/commons/1/16/2018_Mercedes-Benz_C200_2.0_Front.jpg",
+      "https://upload.wikimedia.org/wikipedia/commons/1/1e/2018_Volvo_XC60_Momentum_D4_AWD_2.0_Front.jpg",
+      "https://upload.wikimedia.org/wikipedia/commons/7/73/2017_Honda_Civic_SR_VTEC_1.0_Front.jpg",
+      "https://upload.wikimedia.org/wikipedia/commons/4/4a/2018_Mazda_6_Sport_Nav_2.2_Front.jpg"
     ];
-    for(let k=0;k<out.length && k<demo.length*120;k++){ out[k].images=[demo[k%demo.length]]; }
+    for(let k=0;k<out.length && k<demo.length*200;k++){ out[k].images=[demo[k%demo.length]]; }
     setDB(out);
   }
   if(getDB().length===0) seedDB();
 
-  // ==== Инициализация селектов/инпутов
+  // ==== Ініціалізація селектів
   const fltCity=$("#fltCity"), fltSection=$("#fltSection"), fltBrand=$("#fltBrand"), fltModel=$("#fltModel");
   const fltYearMin=$("#fltYearMin"), fltYearMax=$("#fltYearMax"), fltFuel=$("#fltFuel"), fltGear=$("#fltGear"),
         fltDrive=$("#fltDrive"), fltBody=$("#fltBody"), fltColor=$("#fltColor"),
@@ -321,9 +351,9 @@
   fillSelect($("#sModel"), [], false);
   $("#sBrand").addEventListener("change", ()=> fillSelect($("#sModel"), BRANDS[$("#sBrand").value]||[], false));
 
-  // ==== Кастомные селекты (desktop)
+  // ==== Кастомні селекти (desktop)
   function enhanceSelect(sel){
-    if (matchMedia('(hover: none)').matches) return; // на мобиле оставляем нативно
+    if (matchMedia('(hover: none)').matches) return;
     const wrap=document.createElement('div'); wrap.className='nice';
     const btn=document.createElement('button'); btn.type='button'; btn.className='nice-btn';
     const list=document.createElement('div'); list.className='nice-list';
@@ -344,8 +374,9 @@
   document.addEventListener('click', closeAll);
   $$('.select').forEach(enhanceSelect);
 
-  // ==== Поиск/рендер
+  // ==== Пошук/рендер
   const grid=$("#grid"), resCount=$("#resCount"), btnMore=$("#btnMore"), sortBy=$("#sortBy");
+  const morebar=$("#morebar"), btnMoreBottom=$("#btnMoreBottom");
   let page=0, pageSize=24, lastResults=[];
 
   function applyFilters(){
@@ -392,11 +423,29 @@
     renderMore();
   }
 
+  function remainingCount(){
+    const rem = lastResults.length - page*pageSize;
+    return Math.max(0, rem);
+  }
+  function updateMoreUI(){
+    const hasMore = remainingCount() > 0;
+    btnMore.style.display = "none"; // верхню ховаємо
+    if(hasMore){
+      const n = Math.min(pageSize, remainingCount());
+      btnMoreBottom.textContent = `Показати ще ${n}`;
+      // показувати після невеликої прокрутки, щоб не заважала фільтрам
+      morebar.style.display = (window.scrollY > 200) ? "block" : "none";
+    }else{
+      morebar.style.display = "none";
+    }
+  }
+  window.addEventListener('scroll', updateMoreUI);
+
   function renderMore(){
     const slice=lastResults.slice(page*pageSize,(page+1)*pageSize);
     slice.forEach(renderCard);
     page++;
-    btnMore.style.display = (page*pageSize < lastResults.length) ? "inline-block":"none";
+    updateMoreUI();
   }
 
   function renderCard(it){
@@ -422,11 +471,20 @@
   let applyLock=false;
   $("#btnApply").onclick=()=>{ if(applyLock) return; applyLock=true; applyFilters(); setTimeout(()=>applyLock=false, 600); };
   $("#btnReset").onclick=()=>{$$("#searchPanel .select, #searchPanel .input").forEach(x=>x.value=""); fltRecent.checked=false; applyFilters();};
-  $("#btnMore").onclick=renderMore; $("#sortBy").onchange=applyFilters;
+  $("#btnMoreBottom").onclick=renderMore; $("#btnMore").onclick=renderMore; $("#sortBy").onchange=applyFilters;
   applyFilters();
 
-  // Деталь
+  // Детальна
   function spec(k,v){return `<div class="spec"><div class="h">${k}</div>${v}</div>`}
+  function setAttribution(url){
+    const d=$("#dAttribution");
+    if(!url){ d.textContent=""; return; }
+    if(/wikipedia|wikimedia/i.test(url)){
+      d.innerHTML = 'Фото: <a href="'+url+'" target="_blank" rel="noopener noreferrer">Wikimedia Commons</a> (CC BY-SA).';
+    }else{
+      d.textContent="";
+    }
+  }
   function openDetail(id){
     const db=getDB();
     const idx=db.findIndex(x=>x.id===id); if(idx<0) return;
@@ -452,10 +510,12 @@
         <div style="position:relative; padding-top:56%; background:#0b3a8a; border-radius:12px; overflow:hidden"></div>
         <div style="position:relative; padding-top:56%; background:#0b3a8a; border-radius:12px; overflow:hidden"></div>
       </div>`;
-    $("#dGal").querySelector(".big").appendChild(createImg(imgs[0],`${it.brand}`,f1));
+    const big=$("#dGal").querySelector(".big");
+    big.appendChild(createImg(imgs[0],`${it.brand}`,f1));
     const sm=$("#dGal").querySelectorAll(".sm>div");
     sm[0].appendChild(createImg(imgs[1],`${it.brand}`,f2));
     sm[1].appendChild(createImg(imgs[2],`${it.brand}`,f3));
+    setAttribution(imgs[0]||imgs[1]||imgs[2]||"");
 
     $("#dSpecs").innerHTML=`
       ${spec("Місто",it.city)} ${spec("Розділ",it.section)} ${spec("Пробіг",(it.mileage/1000|0)+" тис.км")}
@@ -467,7 +527,7 @@
       <div><div class="h">Продавець</div><div>${it.seller?.name||"Продавець"}</div><div class="small">${it.seller?.phone||""}</div></div>`;
   }
 
-  // Публікація (антиспам + валідація)
+  // Публікація
   $("#sSave").onclick=()=>{
     const ctrl=getCtrl(); const now=Date.now();
     if(ctrl.lastPost && now-ctrl.lastPost<60000){ alert("Публікувати можна не частіше 1 разу на 60 сек."); return; }
@@ -498,35 +558,49 @@
   $("#tabSearch").onclick=()=>{ $("#sellPanel").style.display="none"; window.scrollTo({top:0, behavior:"smooth"}); };
   $("#tabSell").onclick=()=>{ $("#sellPanel").style.display="block"; window.scrollTo({top:document.body.scrollHeight, behavior:"smooth"}); };
 
-  // Импорт JSON
-  // Формат: массив объектов со свойствами:
-  // {
-  //   "city":"Київ","section":"Легкові","brand":"Volkswagen","model":"Golf",
-  //   "year":2018,"mileage":98000,"fuel":"Бензин","gear":"Автомат","drive":"FWD",
-  //   "body":"Хетчбек","power":125,"color":"Сірий","price":12500,"currency":"$",
-  //   "created": 1713139200000, "vin":"WVW...", "seller":{"name":"Олексій","phone":"+380..."},
-  //   "desc":"Офіційне авто...", "images":["https://ваш-хост/1.jpg","data:image/jpeg;base64,..."]
-  // }
+  // Імпорт JSON з файлу
   $("#importJson").addEventListener("change", async (e)=>{
     const f=e.target.files?.[0]; if(!f) return;
     try{
       const arr=JSON.parse(await f.text());
-      if(!Array.isArray(arr)) throw new Error("JSON має бути масивом");
-      const db=getDB();
-      arr.forEach(o=>{
-        db.push({
-          id:uid(), city:o.city||"Київ", section:o.section||"Легкові", brand:o.brand||"Brand", model:o.model||"Model",
-          year:+o.year||2020, mileage:+o.mileage||rand(10000,200000), fuel:o.fuel||"Бензин", gear:o.gear||"Автомат",
-          drive:o.drive||"FWD", body:o.body||"Седан", power:+o.power||120, color:o.color||"Сірий",
-          price:+o.price||10000, currency:o.currency||"$", created:+o.created||Date.now(),
-          vin:o.vin||"", seller:o.seller||{name:"Імпорт", phone:"+380"}, desc:o.desc||"Імпортоване оголошення.",
-          images:Array.isArray(o.images)?o.images.slice(0,3):[], views:+o.views||rand(150,500)
-        });
-      });
-      setDB(db); applyFilters(); alert("Імпортовано!");
+      doImportArray(arr);
+      alert("Імпортовано!");
     }catch(err){ alert("Помилка імпорту: "+err.message); }
     e.target.value="";
   });
+
+  // Імпорт з URL (JSON). Потрібен CORS-дозвіл на сервері джерела.
+  $("#importUrlBtn").addEventListener("click", async ()=>{
+    const url=prompt("Вставте URL до JSON (GitHub Raw / Google Apps Script / ваш сервер):");
+    if(!url) return;
+    try{
+      const r=await fetch(url, {mode:"cors"});
+      if(!r.ok) throw new Error("HTTP "+r.status);
+      const arr=await r.json();
+      doImportArray(arr);
+      alert("Імпортовано з URL!");
+    }catch(err){
+      alert("Не вдалося завантажити. Якщо це Google Sheets, опублікуйте як JSON з Apps Script або GitHub Raw. Помилка: "+err.message);
+    }
+  });
+
+  // Загальна імпорт-логіка
+  function doImportArray(arr){
+    if(!Array.isArray(arr)) throw new Error("JSON має бути масивом");
+    const db=getDB();
+    arr.forEach(o=>{
+      db.push({
+        id:uid(), city:o.city||"Київ", section:o.section||"Легкові", brand:o.brand||"Brand", model:o.model||"Model",
+        year:+o.year||2020, mileage:+o.mileage||rand(10000,200000), fuel:o.fuel||"Бензин", gear:o.gear||"Автомат",
+        drive:o.drive||"FWD", body:o.body||"Седан", power:+o.power||120, color:o.color||"Сірий",
+        price:+o.price||10000, currency:o.currency||"$", created:+o.created||Date.now(),
+        vin:o.vin||"", seller:o.seller||{name:"Імпорт", phone:"+380"}, desc:o.desc||"Імпортоване оголошення.",
+        images:Array.isArray(o.images)?o.images.slice(0,3):[], views:+o.views||rand(150,500)
+      });
+    });
+    setDB(db); applyFilters();
+  }
+
   </script>
 </body>
 </html>
